--- a/EasySpaceServer/EasySpaceServer/EasySpaceServer.csproj
+++ b/EasySpaceServer/EasySpaceServer/EasySpaceServer.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conn.cs" />
+    <Compile Include="Core\DataMgr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serv.cs" />
