--- a/EasySpaceServer/EasySpaceServer/EasySpaceServer.csproj
+++ b/EasySpaceServer/EasySpaceServer/EasySpaceServer.csproj
@@ -49,6 +49,9 @@
   <ItemGroup>
     <Compile Include="Conn.cs" />
     <Compile Include="Core\DataMgr.cs" />
+    <Compile Include="Core\Player.cs" />
+    <Compile Include="Entity\PlayerData.cs" />
+    <Compile Include="Entity\PlayerTempData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serv.cs" />
@@ -58,6 +61,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
